Fix layout bugs on mobile

--- a/styles/modules/buttons.scss
+++ b/styles/modules/buttons.scss
@@ -11,24 +11,23 @@
 
 .button-primary {
   color: white;
+  text-shadow: 0 1px 0 rgba(black, .25);
   background: $primary-color;
   border: 1px solid $primary-color-border;
 }
 
 .button-bottom {
   display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
   width: 100%;
-}
-
-.full-width .button {
-  font-size: 1.5em;
-  border-radius: 0;
-}
-
-.button-bottom {
-  display: block;
-  width: 100%;
+  height: $form-bottom-button-height;
+  padding: 0;
   margin: 0;
+  border-radius: 0;
+
+  font-size: 1.5em;
 }
 
 .button-translucent {
