--- a/styles/modules/grid.scss
+++ b/styles/modules/grid.scss
@@ -1,21 +1,8 @@
 .container {
   padding: $container-padding;
-}
 
-.full-width {
-  width: 100%;
-  margin: -$container-padding;
-}
-
-.full-height {
-  padding-bottom: 3em;
-}
-
-.align-bottom {
-  position: fixed;
-  bottom: 0;
-
-  &.full-width {
-    margin-bottom: 0;
+  &.separator {
+    border-bottom: $section-separator-border;
+    margin-bottom: $container-padding;
   }
 }
