--- a/styles/modules/images.scss
+++ b/styles/modules/images.scss
@@ -4,6 +4,6 @@ img {
 }
 
 .logo {
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  padding-bottom: 1em;
 }
