--- a/styles/modules/variables.scss
+++ b/styles/modules/variables.scss
@@ -1,7 +1,9 @@
-$container-padding: 10px;
+$container-padding: .75em;
 $body-background: #f9f9f9;
 $primary-color: #4A90E2;
 $primary-color-border: #3684DE;
 $text-color: #222;
 $link-color: saturate($primary-color, 10%);
 $control-border: 1px solid #D8D8D8;
+$section-separator-border: 1px solid #E9E9E9;
+$form-bottom-button-height: 4.5rem;
